--- a/package.json
+++ b/package.json
@@ -1,1 +1,11 @@
+{
+  "name": "fashion-vercel",
+  "version": "1.0.0",
+  "dependencies": {
+    "firebase-admin": "^11.2.0",
+    "node-fetch": "^3.3.2",
+    "multer": "^1.4.5",
+    "cors": "^2.8.5"
+  }
+}
 
