--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fashion vercel",
+    "name": "fashion craft",
     "version": "1.0.0",
     "dependencies": {
         "firebase-admin": "^13.6.0",
